# Water-Year-Classification

./: _pyproject.toml  _requirements.txt  app.py  pyproject.toml  readme.md  requirements.txt  run.sh
