[tool.poetry]
name = "pandas_analysis"
version = "0.1.0"
description = ""
authors = ["Denver Noell <denvernoell@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
plotly = "^5.11.0"
dash = "^2.7.0"
dash-bootstrap-components = "^1.2.1"
dash-bootstrap-templates = "^1.0.7"
streamlit = "^1.15.2"
streamlit-aggrid = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
